Fix spacing between tunesync buttons, collapse navbar on nav click for mobile

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+    padding-top: 65px;
+}
+
 .card-img-top {
     width: 100%;
     height: 15vw;
@@ -10,14 +14,20 @@
     }
 }
 
+@media only screen and (max-width: 374px) {
+    .mb-xsm-1 {
+        margin-bottom: 0.25rem!important;
+    }
+}
+
 .cover-img {
     object-fit: cover;
 }
 
-div#projects:before, div#aboutme:before, div#skills:before {
+div#projects:before, div#aboutme:before, div#skills:before, div#top:before {
     display: block;
-    height: 38px;
-    margin-top: -38px;
+    height: 65px;
+    margin-top: -65px;
     visibility: hidden;
     content: "";
   }
